--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,9 +1,9 @@
-.radial-menu {
+.radial-menu, .inner-menu {
   list-style-type: none;
   padding: 1% 2%;
   width: 170px;
   text-align: center;
-  .radial-menu-item {
+  .inner-menu-item {
     background: #ffc87e;
     color: #fff;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
