--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,13 +1,27 @@
 .radial-menu, .inner-menu {
   list-style-type: none;
-  padding: 1% 2%;
   width: 170px;
   text-align: center;
   .inner-menu-item {
-    background: #ffc87e;
-    color: #fff;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0px 0px 21px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 0px 0px 21px -5px rgba(0,0,0,0.75);
+    box-shadow: inset 0px 0px 21px -5px rgba(0,0,0,0.75);
+    position: relative;
+    background: #eeeeee;
+    color: #646464;
     padding: 11px 13px;
     border: 1px solid grey;
+    .inner-menu {
+      position: absolute;
+      top: -1px;
+      left: 130px;
+    }
   }
+}
+.inner-menu {
+    display: none;
+}
+.inner-menu-item.open-item > .inner-menu {
+  display: block !important;
 }
