--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -2,6 +2,8 @@
   list-style-type: none;
   width: 170px;
   text-align: center;
+  padding: 0;
+  margin-left: 4%;
   .inner-menu-item {
     cursor: pointer;
     -webkit-box-shadow: inset 0px 0px 21px -5px rgba(0,0,0,0.75);
@@ -12,8 +14,8 @@
     padding: 11px 13px;
     .inner-menu {
       position: absolute;
-      top: -1px;
-      left: 130px;
+      bottom: -1px;
+      left: 100%;
     }
   }
 }
